# newsletter

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yaml
.sqlx/: query-8b4f288bd9e572af32c569f2663cf1d5586e4829fd33adbf0cc8c6870bd96e2a.json  query-96f0a6b12395fba8e0843cf084cf67856e799e1d034d1499324c6c59c7e28f32.json  query-f98ce6d1c776c82b66cd627b90ff9a3f6f4607ba959fb984ddbd40e59f15f8a2.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240111214732_add_status_to_subscriptions.sql  20240112191104_create_subscriptions_token_table.sql  20240203162740_create_users_table.sql
scripts/: init_db.sh
src/: auth.rs  config.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: delivery.rs  health_check.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/index/: index.html  mod.rs
src/routes/login/: login.html  mod.rs
tests/: healt_check.rs
tests/api/: delivery.rs  health_check.rs  helpers.rs  login.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
