[package]
name = "stoic-newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.13"
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4"] }
env_logger = "0.10.1"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }

